samples/_failures_safe/1761485768_769d9c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f645a6f4.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_f645a6f4.c:132:56: error: expected ‘)’ at end of input
  132 |             matrix_set(result, j, i, matrix_get(a, i, j
      |                                                ~       ^
      |                                                        )
./samples/SAFE/__tmp_f645a6f4.c:132:13: error: expected declaration or statement at end of input
  132 |             matrix_set(result, j, i, matrix_get(a, i, j
      |             ^~~~~~~~~~
./samples/SAFE/__tmp_f645a6f4.c:132:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f645a6f4.c:132:13: error: expected declaration or statement at end of input
